# MindMap

./: CMakeLists.txt  Line.c  Line.h  README.md  TextBox.c  TextBox.h
INPUTDATA/: usri.txt
METADATA/: debug.txt
OUTPUTDATA/: 001.txt  002.txt  usro.txt  usro1.txt
lib/: ButtonRelated.h  Display.h  Line.h  MyInput.h  Output.h  TextBox.h  mygui.h
mindmap/: ButtonRelated.c  ButtonRelated.h  Display.c  Line.c  Main.c  MyInput.c  Output.c  TextBox.c  TextBox.h
simpleGUI/: imgui.c  mygui.c
